Replace commons-lang dependency with commons-lang3 #418
Replace deprecated usages